refactor(TG-): first clean: minor improvements and migrate assertions to AssertJ